check block size in sync validator
Signed-off-by: Sally MacFarlane <macfarla.github@gmail.com>